syntax = "proto3";

package calcservice;

service CalcService {
    rpc CalcProbability (CalcRequest) returns (CalcReply);
    rpc GetModelInfo (ModelInfoRequest) returns (ModelInfoReply);
    rpc GetImpact (ImpactRequest) returns (ImpactReply);
}

message CalcRequest {
    string INN = 1;
    map<string, string> Params = 2;
}

message CalcReply {
    map<string, float> Result = 1;
}

message ModelInfoRequest {
    string ModelName = 1;
}

message ModelInfoReply {
    map<string, bytes> Result = 1;
}

message ImpactRequest {
    string ModelName = 1;
    map<string, string> Data = 2;
    string Feature = 3;
    float Head = 4;
    float Tail = 5;
}

message ImpactReply {
    bytes Image = 1;
}